<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/keypad_grid">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/digit7"
            style="@style/keypad_button_digit"
            android:text="@string/digit7"/>
        <Button
            android:id="@+id/digit8"
            style="@style/keypad_button_digit"
            android:text="@string/digit8"/>
        <Button
            android:id="@+id/digit9"
            style="@style/keypad_button_digit"
            android:text="@string/digit9"/>
        <org.debian.eugen.headingcalculator.ExplainableButton
            android:id="@+id/true_course_btn"
            style="@style/keypad_button"
            android:text="@string/true_course_abb"
            android:contentDescription="@string/true_course"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/digit4"
            style="@style/keypad_button_digit"
            android:text="@string/digit4"/>
        <Button
            android:id="@+id/digit5"
            style="@style/keypad_button_digit"
            android:text="@string/digit5"/>
        <Button
            android:id="@+id/digit6"
            style="@style/keypad_button_digit"
            android:text="@string/digit6"/>
        <org.debian.eugen.headingcalculator.ExplainableButton
            android:id="@+id/true_airspeed_btn"
            style="@style/keypad_button"
            android:text="@string/true_airspeed_abb"
            android:contentDescription="@string/true_airspeed"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/digit1"
            style="@style/keypad_button_digit"
            android:text="@string/digit1"/>
        <Button
            android:id="@+id/digit2"
            style="@style/keypad_button_digit"
            android:text="@string/digit2"/>
        <Button
            android:id="@+id/digit3"
            style="@style/keypad_button_digit"
            android:text="@string/digit3"/>
        <org.debian.eugen.headingcalculator.ExplainableButton
            android:id="@+id/wind_direction_btn"
            style="@style/keypad_button"
            android:text="@string/wind_direction_abb"
            android:contentDescription="@string/wind_direction"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/digit0"
            style="@style/keypad_button_digit"
            android:text="@string/digit0"/>
        <Button
            android:id="@+id/backspace_btn"
            style="@style/erase_button"
            android:text="@string/delete_btn"/>
        <Button
            android:id="@+id/clear_btn"
            style="@style/erase_button"
            android:text="@string/clear_btn"/>
        <org.debian.eugen.headingcalculator.ExplainableButton
            android:id="@+id/wind_speed_btn"
            style="@style/keypad_button"
            android:text="@string/wind_speed_abb"
            android:contentDescription="@string/wind_speed"/>
    </LinearLayout>
</LinearLayout>